Fixing about overlaping with image and fixing hamburguer

--- a/styles/decoration.less
+++ b/styles/decoration.less
@@ -115,14 +115,6 @@
 }
 
 
-/** Buttons **/
-
-// Hamburgesa
-
-.pkp_site_nav_toggle {
-	background-color: red;
-}
-
 /*
 //Galleys (usually "PDF")
 .obj_galley_link {
