--- a/styles/responsive.less
+++ b/styles/responsive.less
@@ -8,6 +8,21 @@
 @media( max-width: @screen-desktop ) {
 	// Tablets or smaller (less than 992px)
 	// width: @screen-desktop;
+
+	/** Buttons **/
+
+	// Hamburgesa
+
+	.pkp_site_name_wrapper {
+		height: @rsTopImg;
+		.pkp_site_nav_toggle {
+			background-color: @color-line;
+			position: fixed;
+			top: 0;
+			left: 0;
+		}
+	}
+
 }
 
 @media( max-width: @screen-tablet ) {
